# task-vectors-playground

./: .gitignore  .pre-commit-config.yaml  README.md  data.dvc  env.yaml  first_wandb_test.py  freeze.txt  mkdocs.yml  mnist_example.py  pyproject.toml  pytorch_lightning_test.py  setup.cfg  stuff.py
.dvc/: config
.github/workflows/: publish.yml  test_suite.yml
0.0/: 404.html  index.html
0.0/search/: search_index.json
conf/: default.yaml  finetune.yaml  task_vectors.yaml
conf/nn/: default.yaml
conf/nn/data/: default.yaml
conf/nn/data/dataset/: cars.yaml  cifar100.yaml  cola.yaml  dtd.yaml  eurosat.yaml  food101.yaml  gtsrb.yaml  imagenet.yaml  mnist.yaml  mnli.yaml  mrpc.yaml  qnli.yaml  qqp.yaml  resisc45.yaml  rte.yaml  sst2.yaml  stl10.yaml  stsb.yaml  sun397.yaml  svhn.yaml
conf/nn/module/: default.yaml
conf/nn/module/model/: bert.yaml  clip_text_encoder.yaml  cnn.yaml  roberta.yaml  vit.yaml
conf/train/: default.yaml
docs/: index.md
misc/: palette.json  palette_map.json
notebooks/: anchors.pth  custom_encoder.ipynb  custom_imageClassifier.ipynb  dataset_stats.pth  demo.ipynb  demo_repair.ipynb  demo_repair_similarity.ipynb  demo_spherical_barycenter.ipynb  errors_TSV.json  errors_lossless.json  finetuning_accs.json  gradient_norms.csv  gradient_norms.ipynb  high_order_task_arithm_table.ipynb  interference.ipynb  nlp_playground.ipynb  plot_tsv.ipynb  plots.ipynb  results_spherical.json  slerp_playground.ipynb  task_singular_vectors.ipynb  task_vectors_pca.ipynb
src/scripts/: autoexperiment.py  autofinetune.py  evaluate.py  evaluate_text.py  finetune.py  finetune_text.py  main.py  my_pcgrad.py  pca.py  try_dataset.py  tsne.py  use_task_vectors.py
src/scripts/competitors/: my_breadcrumbs.py  my_dare.py  my_ties.py  their_ties.py
src/tvp/: run.py
src/tvp/analyses/: activations_compute.py  activations_stats.py  activations_stats_side_by_side_arbitrary.py  activations_stats_side_by_side_sequence.py  cka.py
src/tvp/data/datasets/: cars.py  cifar10.py  cifar100.py  cola.py  common.py  dtd.py  eurosat.py  glue_data_loader.py  gtsrb.py  imagenet.py  mnist.py  mnli.py  mrpc.py  qnli.py  qqp.py  rte.py  (+8 more)
src/tvp/modules/: clip_text_encoder.py  clip_tokenizer.py  encoder.py  heads.py  text_encoder.py  text_heads.py
src/tvp/pl_module/: image_classifier original.py  image_classifier.py  image_multihead_classifier.py  text_classifier.py
src/tvp/pl_modules/: pl_module.py
src/tvp/task_vectors/: aggregation.py  aggregator.py  task_singular_vectors.py  task_vectors.py
src/tvp/ui/: run.py
src/tvp/utils/: args.py  eval.py  io_utils.py  organize_imagefolder_dataset.py  organize_root_structure_for_imagefolder_dataset.py  plots.py  utils.py
tests/: conftest.py  test_checkpoint.py  test_configuration.py  test_resume.py
(+6 files in other folders)
