[metadata]
name = task-vectors-playground
description = Playing with those task vectors
url = https://github.com/crisostomi/task-vectors-playground
long_description = file: README.md
author = Donato Crisostomi
author_email = donatocrisostomi@gmail.com
keywords = python
license = MIT Licence

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages=find:
install_requires =
    nn-template-core==0.3.2
    anypy==0.0.*

    # Add project specific dependencies
    # Stuff easy to break with updates
    lightning==2.0.0
    torchmetrics==1.0.*
    hydra-core==1.3.*
    wandb
    streamlit
    # hydra-joblib-launcher

    # Stable stuff usually backward compatible
    rich
    dvc
    python-dotenv
    matplotlib
    stqdm
    certifi
    charset-normalizer
    contourpy
    cvxpy
    cycler
    ecos
    filelock
    fonttools
    ftfy
    huggingface-hub
    idna
    kiwisolver
    matplotlib
    numpy
    open-clip-torch==2.0.2
    osqp
    packaging
    pandas
    patsy
    pillow
    plotly
    pycparser
    pyopenssl
    pyparsing
    pysocks
    python-dateutil
    pytz
    pyyaml
    qdldl
    regex
    requests
    scipy
    scs
    seaborn
    six
    statsmodels
    tenacity
    tqdm
    typing-extensions
    urllib3
    wcwidth
    wheel
    rich
    scipy
    # faiss-cpu
    # faiss-gpu
    transformers

[options.packages.find]
where=src

[options.package_data]
* = *.txt, *.md

[options.extras_require]
docs =
    mkdocs
    mkdocs-material
    mike

test =
    pytest
    pytest-cov

dev =
    black
    flake8
    isort
    pre-commit
    bandit
    %(test)s
    %(docs)s
